// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputField component > matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="_inputfield_9ac07b"
  >
    <label
      class="_inputfield__label_9ac07b "
      for="test-input"
    >
      Test Label
    </label>
    <input
      autocomplete="off"
      class="_inputfield__input_9ac07b"
      id="test-input"
      name="test-input"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`InputField component > matches snapshot with value and maxLength 1`] = `
<DocumentFragment>
  <div
    class="_inputfield_9ac07b"
  >
    <label
      class="_inputfield__label_9ac07b _inputfield__label--float_9ac07b"
      for="test-input"
    >
      Test Label
    </label>
    <input
      autocomplete="off"
      class="_inputfield__input_9ac07b"
      id="test-input"
      maxlength="20"
      name="test-input"
      type="text"
      value="test value"
    />
  </div>
</DocumentFragment>
`;
